--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="js/app.js"></script>
-    <link href="/styles/style.css" />
+    <script src="js/app.js" defer></script>
+    <link rel="stylesheet" href="/styles/style.css" />
 
     <title>JavaScript events</title>
   </head>
@@ -20,6 +20,9 @@
 
     <p id="hoverPara">Hover over this Text !</p>
 
-    <div class="box">box</div>
+    <div class="container">
+      <input type="text" class="keyboard" />
+      <button class="btn">Send</button>
+    </div>
   </body>
 </html>
